--- a/assignment02/src/pc/assignment02/pom.xml
+++ b/assignment02/src/pc/assignment02/pom.xml
@@ -11,14 +11,19 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>io.github.java-native</groupId>
+            <artifactId>jssc</artifactId>
+            <version>2.9.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>13</version>
+            <version>21</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>13</version>
+            <version>21</version>
         </dependency>
     </dependencies>
     <build>
