--- a/assignment02/platformio.ini
+++ b/assignment02/platformio.ini
@@ -13,3 +13,4 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_deps = arduino-libraries/Servo@^1.1.8
+    marcoschwartz/LiquidCrystal_I2C@^1.1.4
