--- a/assignment02/platformio.ini
+++ b/assignment02/platformio.ini
@@ -14,3 +14,5 @@ board = uno
 framework = arduino
 lib_deps = arduino-libraries/Servo@^1.1.8
     marcoschwartz/LiquidCrystal_I2C@^1.1.4
+    paulstoffregen/TimerOne@^1.1
+build_flags = -I include
