--- a/assignment02/platformio.ini
+++ b/assignment02/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = nabontra/ServoTimer2 ; > arduino-libraries/Servo@^1.1.8
+lib_deps = arduino-libraries/Servo@^1.2.2
     marcoschwartz/LiquidCrystal_I2C@^1.1.4
     paulstoffregen/TimerOne@^1.1
 build_flags = -I include
