feat: Added Dashboard FXML

--- a/assignment03/src/dashboard-frontend/pom.xml
+++ b/assignment03/src/dashboard-frontend/pom.xml
@@ -33,6 +33,11 @@
     </dependencies>
     <build>
         <sourceDirectory>stm/src/main/java/</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>stm/src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
