--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 .vscode
+.pio
+
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
+
+.pc/assignment02/target/
+.pc/assignment03/target/
