--- a/assignment03/src/window-controller/platformio.ini
+++ b/assignment03/src/window-controller/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = Wire
+    nabontra/ServoTimer2
+    marcoschwartz/LiquidCrystal_I2C@^1.1.4
+    paulstoffregen/TimerOne@^1.1
+build_flags = -I include
